# ai-writer-council

./: .env.example  .gitignore  CLAUDE.md  IDEAS.md  README.md  pyproject.toml  start.sh  test_llm.py
backend/: __init__.py  main.py
backend/api/: __init__.py
backend/committee/: __init__.py
backend/llm/: __init__.py  client.py  config_loader.py
backend/memory/: __init__.py  manager.py
backend/workflow/: __init__.py  orchestrator.py  schemas.py
config/: committee.yaml  models.yaml
docs/: frontend_spec.md
frontend/: app.js  index.html  style.css
presets/: default.yaml
scripts/: backfill_titles.py
