[project]
name = "ai-writer-council"
version = "0.1.0"
description = "AI 作家委员会 - 多 agent 协作长篇小说创作工具"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "yekongclx-a11y" },
]
dependencies = [
    "anthropic>=0.100.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "json-repair>=0.59.6",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.46.0",
]
